--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.js"></script>
     <!-- elementui -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>西蒙导航</title>
   </head>
   <body>
     <noscript>
