--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- font-awesome css-->
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.15.1/css/all.css" rel="stylesheet">
+    <!-- 阿里图标库 -->
+    <script src="//at.alicdn.com/t/font_2344450_nicryu3vfg.js"></script>
     <!-- element-ui 的样式表文件 -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-    <script src="https://cdn.bootcss.com/vuex/3.1.3/vuex.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.js"></script>
+    <script src="https://unpkg.com/vuex/dist/vuex.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- elementui -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     
