--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- elementui -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     
-    <title>西蒙导航</title>
+    <title>简约导航</title>
   </head>
   <body>
     <div id="app"></div>
